新增仪表盘功能，统计面试数据，再进一步完善项目，解决潜在问题，增强项目安全性